--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,16 @@
     box-sizing: border-box;
 }
 
-html {
-    background-color: gray;
+body {
+    background-color: rgba(197, 193, 193, 0.664);
+    padding: 70px;
+    font-family: Arial, Helvetica, sans-serif;
+    overflow-y: scroll;
 }
 
 h1 {
     text-align: center;
+    color: #333;
 }
 
 main {
@@ -25,18 +29,29 @@ section{
     height: 100px;
     font-size: 50px;
     text-align: center;
+    border: 1px solid #b6b3b3;
+    border-radius: 3px;
+    margin: 3px;
+    cursor: pointer;
 }
 
 button {
-    background-color: lightblue;
+    background-color: rgb(54, 67, 102);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     width: 100%;
+    cursor: pointer;
     min-width: 100px;
     height: 50px;
     margin: auto;
 }
 
 #print {
+    margin-top: 30px;
+    padding: 5px;
     text-align: center;
-    color: black;
-    font-size: 18pt;
+    color: green;
+    font-size: 14pt;
 }
